...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0G-7x-6w5" userLabel="Data label
                                                    <rect key="frame" x="24.000000000000007" y="188" width="101.66666666666669" height="16"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" name="Date color"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AIF-l3-5Lm" userLabel="LikeButton">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="8dh-Cj-lHn"/>
                                                        <constraint firstAttribute="width" constant="44" id="ZNd-Zu-pBo"/>
                                                    </constraints>
...
                                                <constraint firstAttribute="trailing" secondItem="TR2-JA-g9Y" secondAttribute="trailing" constant="16" id="rr7-3t-2tJ"/>
                                                <constraint firstItem="TR2-JA-g9Y" firstAttribute="leading" secondItem="2Lk-LF-BTJ" secondAttribute="leading" constant="16" id="ufd-4L-rbc"/>
                                                <constraint firstItem="TR2-JA-g9Y" firstAttribute="top" secondItem="2Lk-LF-BTJ" secondAttribute="top" constant="4" id="wOT-fW-XI1"/>
                                                <constraint firstItem="TR2-JA-g9Y" firstAttribute="bottom" secondItem="j0G-7x-6w5" secondAttribute="bottom" constant="8" id="yZH-m6-oZZ"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="FeedTableView"/>
                                        <connections>
                                            <outlet property="cellImageView" destination="TR2-JA-g9Y" id="E5l-JW-hPo"/>
                                            <outlet property="dateLabel" destination="j0G-7x-6w5" id="qQq-zt-WEK"/>
                                            <outlet property="likeButton" destination="AIF-l3-5Lm" id="PcK-ku-rsq"/>
                                        </connections>
                                    </tableViewCell>
...
                                <connections>
                                    <action selector="didTapShareButton:" destination="hpE-Gk-apg" eventType="touchUpInside" id="qAp-pZ-hok"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vk4-IQ-B0K" userLabel="Back button">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="Mm0-pI-4D8"/>
                                    <constraint firstAttribute="height" constant="48" id="VOj-Wb-Jcy"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="backward arrow" title=" "/>
...
