...
        profilePresenter.view = profileViewController
        profileViewController.tabBarItem = UITabBarItem(
            title: "",
            image: UIImage(named: "tab_profile_active"),
            selectedImage: nil
        )
        profileViewController.tabBarItem.accessibilityIdentifier = "ProfileTabBarButton"
        
        // Создание кнопки для ленты (ImagesList)
        imagesListViewController.tabBarItem = UITabBarItem(
            title: "",
            image: UIImage(named: "tab_editorial_active"),
            selectedImage: nil
        )
        imagesListViewController.tabBarItem.accessibilityIdentifier = "ImagesListTabBarButton"
        
        self.viewControllers = [imagesListViewController, profileViewController]
    }
    
    private func setupViewControllers() {
        guard let viewControllers = viewControllers else { return }
...
