...
            self.switchToAuthScreen()
        }
        
        let noAction = UIAlertAction(title: "No", style: .cancel, handler: nil)
        
        // Установка accessibilityIdentifier для кнопок
        yesAction.accessibilityIdentifier = "LogoutYesButton"
        noAction.accessibilityIdentifier = "LogoutNoButton"
        
        alertController.addAction(yesAction)
        alertController.addAction(noAction)
        
        if let windowScene = UIApplication.shared.connectedScenes.first as? UIWindowScene,
...
